@@ -1,4 +1,6 @@
 - complete the hosts stuff
+- save the gateway stuff
+- the configured essid is not showing in the combo box
 - complete the locations stuff
 - add modem devices
 - warn if the user changes hostname
